[package]
name = "key_value_store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.51"
chrono = "^0.4.19"
crossbeam = "^0.8.1"
env_logger = "^0.9.0"
log = "^0.4.14"
rand = "^0.8.4"
serde = {version = "^1.0.0", features = ["derive"]}
serde_json = {version = "^1.0.0"}
structopt = "^0.3.0"
tempfile = "^3.2.0"
thiserror = "1.0.30"
